--- a/VirtualPet.csproj
+++ b/VirtualPet.csproj
@@ -43,9 +43,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Menu.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ScoreBoard.cs" />
     <Compile Include="VirtualPet.cs" />
   </ItemGroup>
   <ItemGroup>
